// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NewTour /> render() should render 1`] = `
<div>
  renderDefault
</div>
`;

exports[`<NewTour /> render() should render children 1`] = `
<div>
  children
</div>
`;

exports[`<NewTour /> renderDefault() should renderDefault 1`] = `
<div>
  <WithStyles(JButton)
    bg="gray"
    onClick={[Function]}
  >
    <WithStyles(GridContainer)
      alignItems="center"
      wrap="nowrap"
    >
      <WithStyles(GridItem)>
        <WithStyles(Icon)
          color="success"
          icon="lnr-plus"
          size="small"
        />
      </WithStyles(GridItem)>
      <WithStyles(GridItem)>
        <WithStyles(JTextClass)
          dark={true}
        >
          Create new
        </WithStyles(JTextClass)>
      </WithStyles(GridItem)>
    </WithStyles(GridContainer)>
  </WithStyles(JButton)>
</div>
`;
